--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <li><a href="#qrcoder">QR code</a></li>
 <li><a href="#spa">Q&A</a></li>
 <li><a href="#contact">Contact Me</a></li>
+<li style="float:inherit"><img src="buldog.png" width="40" height="40"/></li>
 </div>
 		  
 <section id="about" class="section">
@@ -19,20 +20,14 @@
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-about me
-<br/>
+ <h3 >about me</h3> 
+<p>Hi everyone! <br/>
+  My name is Marina botvinnik &#127849 <br/>
+  I was born in Ukraine and immigrated to Israel when I was 2. Since then, I've lived in Be'er Sheva.<br/>
+  Today i'm a research assistant at Yossi Oren's labratory,<br/>
+  the main goal of the research is to find a fingerprint based on the CPU microarchitecture <br/>
+  I am looking forward to build some awesome websites in this class!
+</p>
 <br/>
 <br/>
 </section>
@@ -42,19 +37,34 @@ about me
 <br/>
 <br/>
 <br/>
+<h3 >my photos</h3> 
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my photos
+<div class="row">
+<div class="container">
+  <img src="https://scontent.fsdv2-1.fna.fbcdn.net/v/t1.0-9/82144132_2700962919970221_334441819074985984_n.jpg?_nc_cat=109&_nc_sid=84a396&_nc_ohc=nk2dUzqZqtUAX_xNR_c&_nc_ht=scontent.fsdv2-1.fna&oh=a3b920c495104245907c1a87c43c1ce8&oe=5E9E10EF" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">My Mom</div>
+  </div>
+</div>
+<div class="container">
+  <img src="family.jpg" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">My Family</div>
+  </div>
+</div>
+<div class="container">
+  <img src="mybf.jpeg" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">My &#128151</div>
+  </div>
+</div>
+<div class="container">
+  <img src="friends.jpeg" alt="Avatar" class="image">
+  <div class="overlay">
+    <div class="text">My Friends &#127867 </div>
+  </div>
+</div>
+</div>
 <br/>
 <br/>
 <br/>
@@ -65,19 +75,8 @@ my photos
 <br/>
 <br/>
 <br/>
+<h3>playlist</h3> 
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-my playlist
 <br/>
 <br/>
 <br/>
