--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0"></script>
 <div id="menu">
 <li><a href="#about">About Me</a></li>
 <li><a href="#photos">My Photos</a></li>
@@ -77,6 +79,8 @@
 <br/>
 <h3>playlist</h3> 
 <br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL9eIgGpdSQKyWJjIilu3V2H3Rk1pWJw9h" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<br/>
 <br/>
 <br/>
 <br/>
@@ -87,20 +91,9 @@
 <br/>
 <br/>
 <br/>
+<h3>give me a like &#10086</h3> 
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-give me a like
-<br/>
+<div class="fb-like" data-href="https://sise-web-development-environments.github.io/assignment1-MarinaBotvinnik/" data-width="30" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
 <br/>
 <br/>
 </section>
@@ -110,20 +103,9 @@ give me a like
 <br/>
 <br/>
 <br/>
+<h3>scan my code</h3> 
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-scan my code
-<br/>
+<img style="align-items: center;" src="qrcode.png" alt="qrcode" height="300" width="300">
 <br/>
 <br/>
 </section>
