--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p>Hi everyone! <br/>
   My name is <b>Marina botvinnik</b> &#127849 <br/>
   I was born in Ukraine and immigrated to Israel when I was 2. Since then, I've lived in Be'er Sheva.<br/>
-  Today i'm a research assistant at Yossi Oren's labratory,<br/>
+  Today I'm a research assistant at Yossi Oren's laboratory,<br/>
   the main goal of the research is to find a fingerprint based on the CPU microarchitecture <br/>
   I am looking forward to build some awesome websites in this class!
 </p>
@@ -124,10 +124,10 @@
     It basically works just as an information portal to the viewers or clients 
   </li>
   <li> Web 2.0 is the interactive data writable platform.<br/>
-    The websites now have the option to  to interact with their users or clients. Users can share information (like stack overflow or wikipedia).<br/>
-    <b>*A good test of whether a site is Web 2.0 site is whether it is made better by adding a user(like facebook).</b>
+    The websites now have the option to interact with their users or clients. Users can share information (like Stack Overflow or Wikipedia).<br/>
+    <b>*A good test of whether a site is Web 2.0 site is whether it is made better by adding a user (like Facebook).</b>
   </li>
-  <li>Web 3.0 is the the "semantic web"."<br/>
+  <li>Web 3.0 is the "semantic web".<br/>
       Semantic web means that now the web can analyse the meaning of words when a user is searching some information, rather than on keywords or numbers.<br/>
       It enables the upgradation of back-end of the web, after a long time of focus on the front-end.
       <br/>
@@ -141,7 +141,7 @@
 Let's take for example the use case in which the user is searching for <b>best restaurants in Beer-Sheva</b>
 <ul>
   <li>in web 1.0 he need to put only keywords and the result that he will get will be based only on the information in the websites that will be relevant for the query.</li>
-  <li>in web 2.0 the user will get the restaurants not only by the information, but he will be able to see the rating that people gave for each restaurant and their recomandations.</li>
+  <li>in web 2.0 the user will get the restaurants not only by the information, but he will be able to see the rating that people gave for each restaurant and their recommendations.</li>
   <li>in web 3.0 the data that exists on that user will help to show him restaurants based on his taste and food that he likes</li>
 </ul>
 <br/>
@@ -164,15 +164,17 @@ Let's take for example the use case in which the user is searching for <b>best r
   <textarea name="body" id="message" rows="7" cols="30" value=""></textarea><br>
   </strong>
   <br/>
+  
   <input type="button" style="border: transparent; background-color: transparent;" class="button1 bouncy" value="&#128522" onclick="push ('&#128522')">
   <input type="button" style="border: transparent; background-color: transparent; animation-delay:0.07s;" class="button1 bouncy" value="&#128521" onclick="push ('&#128521')">
   <input type="button" style="border: transparent; background-color: transparent; animation-delay:0.14s;" class="button1 bouncy" value="&#128514" onclick="push ('&#128514')">
   <input type="button" style="border: transparent; background-color: transparent; animation-delay:0.21s;" class="button1 bouncy" value="&#128530" onclick="push ('&#128530')">
   <input type="button" style="border: transparent; background-color: transparent; animation-delay:0.28s;" class="button1 bouncy" value="&#128545" onclick="push ('&#128545')">
   <input type="button" style="border: transparent; background-color: transparent; animation-delay:0.35s;" class="button1 bouncy" value="&#128519" onclick="push ('&#128519')">
-  <br/>
-  <input type="submit" value="send">
-  <input type="reset" value="reset">
+  <div id="buttons"></div>
+  <input  class="btn-hover color-10" type="submit" value="send">
+  <input  class="btn-hover color-10" type="reset" value="reset">
+</div>
 </form>
 <br/>
 <br/>
