--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
 <p>Hi everyone! <br/>
   My name is <b>Marina botvinnik</b> &#127849 <br/>
   I was born in Ukraine and immigrated to Israel when I was 2. Since then, I've lived in Be'er Sheva.<br/>
-  Today I'm a research assistant at Yossi Oren's laboratory,<br/>
+  I really like programming, and that's why I chose this degree.Today I'm a research assistant at Yossi Oren's laboratory,<br/>
   the main goal of the research is to find a fingerprint based on the CPU microarchitecture <br/>
-  I am looking forward to build some awesome websites in this class!
+  My favorite dog is a French bulldog,I had a one for 8 years, and he was the best creature in the world.
+  I enjoyed building this website and looking forward to build some more awesome websites in this class!
 </p>
 <br/>
 <br/>
@@ -140,8 +141,8 @@
 <h4 style="text-decoration-line: underline;"><b> Example of the differences between the webs:</b></h4> 
 Let's take for example the use case in which the user is searching for <b>best restaurants in Beer-Sheva</b>
 <ul>
-  <li>in web 1.0 he need to put only keywords and the result that he will get will be based only on the information in the websites that will be relevant for the query.</li>
-  <li>in web 2.0 the user will get the restaurants not only by the information, but he will be able to see the rating that people gave for each restaurant and their recommendations.</li>
+  <li>in web 1.0 he need to search for particular websites that has all the restaurants, and the information that he will get will be only from those websites.</li>
+  <li>in web 2.0 the user will get the restaurants not only as a list, but he will be able to see the rating that people gave for each restaurant and their recommendations.</li>
   <li>in web 3.0 the data that exists on that user will help to show him restaurants based on his taste and food that he likes</li>
 </ul>
 <br/>
