--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <br/>
 <h3>give me a like &#10086</h3> 
 <br/>
-<div class="fb-like" data-href="https://sise-web-development-environments.github.io/assignment1-MarinaBotvinnik/" data-width="30" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
+<div class="fb-like" data-href="https://sise-web-development-environments.github.io/317522605/" data-width="30" data-layout="standard" data-action="like" data-size="large" data-share="true"></div>
 <br/>
 <br/>
 </section>
